--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,10 @@
         <activity
             android:name=".WineSelection"
             android:label="@string/Actividad2"></activity>
-        <activity android:name=".valoracionVino1"></activity>
+        <activity android:name=".valoracionVino1" android:label="Valoraciones">
+
+        </activity>
+
     </application>
 
 </manifest>
