Añadido botón leyenda en activity_valoracion_vino1.xml Leyenda XML Clase java PopLeyenda Modificaciones al java de valoracionVino1.java añadida nueva activity al manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,10 @@
         <activity android:name=".valoracionVino1" android:label="Valoraciones">
 
         </activity>
+        <activity android:name=".PopLeyenda"
+            android:theme="@style/AppTheme.CustomTheme">
+
+        </activity>
 
     </application>
 
