Añadido botón leyenda en activity_valoracion_vino1.xml Leyenda XML Clase java PopLeyenda Modificaciones al java de valoracionVino1.java añadida nueva activity al manifest
/////

Añadidas imágenes para la leyenda en drawable
Añadida clase java PopVista
Modificado botón prueba en Main Activity
Modificado el background de las Layout de leyendas

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,10 @@
             android:theme="@style/AppTheme.CustomTheme">
 
         </activity>
+        <activity android:name=".PopVista"
+            android:theme="@style/AppTheme.CustomTheme">
+
+        </activity>
 
     </application>
 
