--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,15 +20,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity_aboutus"
-            android:parentActivityName=".MainActivity">
+            android:name=".activity_aboutus">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
+
         </activity>
         <activity
             android:name=".WineSelection"
-            android:label="@string/Actividad2"></activity>
+            android:label="@string/Actividad2"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".valoracionVino1" android:label="Valoraciones">
 
         </activity>
